--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -6,7 +6,7 @@
 </head>
 <body>
   {{> header}}
-  <h1> LA QUIERO TANTO SARA CAMILA ESCOBAR SUAREZ!!!! TANTOOOOOO!!!</h1>
+  <h1> This is the projects page</h1>
 
   {{> footer}}
 </body>
